--- a/Youtuber/Base.lproj/Main.storyboard
+++ b/Youtuber/Base.lproj/Main.storyboard
@@ -33,35 +33,102 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="Icj-Ej-PSe">
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" prefetchingEnabled="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Icj-Ej-PSe">
                                 <rect key="frame" x="0.0" y="120" width="375" height="547"/>
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="lM2-W1-Fz7">
-                                    <size key="itemSize" width="320" height="180"/>
+                                    <size key="itemSize" width="375" height="177"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="cell_id" id="jmq-S1-raL" customClass="VideoCollectionCell" customModule="Youtuber" customModuleProvider="target">
-                                        <rect key="frame" x="27.5" y="0.0" width="320" height="180"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="177"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="320" height="180"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="375" height="177"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Sxx-3g-CD8">
-                                                    <rect key="frame" x="8" y="28" width="304" height="144"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="177"/>
                                                 </imageView>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kbv-NR-Nze" userLabel="InfoView" customClass="InfoView" customModule="Youtuber" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="74.5" width="375" height="102.5"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="1000" text="Title" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ZvI-Xa-g6D" userLabel="TitleView">
+                                                            <rect key="frame" x="8" y="5" width="347" height="30"/>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue-Bold" family="Helvetica Neue" pointSize="25"/>
+                                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                            <color key="shadowColor" red="0.21960784310000001" green="0.21960784310000001" blue="0.25490196079999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <size key="shadowOffset" width="1" height="0.0"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" text="published Date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="7qs-wQ-qWd">
+                                                            <rect key="frame" x="8" y="68" width="109" height="20"/>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                            <color key="shadowColor" red="0.21960784310000001" green="0.21960784310000001" blue="0.25490196079999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <size key="shadowOffset" width="1" height="1"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalCompressionResistancePriority="751" text="ChannelTitle" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4R1-gr-Vxt">
+                                                            <rect key="frame" x="8" y="40" width="90" height="20"/>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="16"/>
+                                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                            <color key="shadowColor" red="0.21960784310000001" green="0.21960784310000001" blue="0.25490196079999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <size key="shadowOffset" width="1" height="1"/>
+                                                        </label>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="12:12" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="K1N-9L-Yjw">
+                                                            <rect key="frame" x="303.5" y="65.5" width="51.5" height="24.5"/>
+                                                            <fontDescription key="fontDescription" name="HelveticaNeue" family="Helvetica Neue" pointSize="20"/>
+                                                            <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <nil key="highlightedColor"/>
+                                                            <color key="shadowColor" red="0.43529411759999997" green="0.4431372549" blue="0.47450980390000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                                            <size key="shadowOffset" width="1" height="1"/>
+                                                        </label>
+                                                    </subviews>
+                                                    <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="7qs-wQ-qWd" secondAttribute="bottom" constant="10" id="4u5-Jn-Tjr"/>
+                                                        <constraint firstItem="ZvI-Xa-g6D" firstAttribute="leading" secondItem="kbv-NR-Nze" secondAttribute="leading" constant="8" id="BLB-vC-DPb"/>
+                                                        <constraint firstItem="4R1-gr-Vxt" firstAttribute="top" secondItem="ZvI-Xa-g6D" secondAttribute="bottom" constant="5" id="IhR-D9-XdP"/>
+                                                        <constraint firstAttribute="trailing" secondItem="K1N-9L-Yjw" secondAttribute="trailing" constant="20" symbolic="YES" id="SNc-oA-uwC"/>
+                                                        <constraint firstItem="ZvI-Xa-g6D" firstAttribute="width" secondItem="kbv-NR-Nze" secondAttribute="width" multiplier="0.75" id="T0u-ZU-ZGq"/>
+                                                        <constraint firstAttribute="trailing" secondItem="ZvI-Xa-g6D" secondAttribute="trailing" constant="20" symbolic="YES" id="Vcy-uP-2ZD"/>
+                                                        <constraint firstItem="7qs-wQ-qWd" firstAttribute="leading" secondItem="4R1-gr-Vxt" secondAttribute="leading" id="WqF-r4-sVQ"/>
+                                                        <constraint firstItem="ZvI-Xa-g6D" firstAttribute="top" secondItem="kbv-NR-Nze" secondAttribute="top" constant="5" id="dhA-Pa-f4P"/>
+                                                        <constraint firstItem="7qs-wQ-qWd" firstAttribute="top" secondItem="4R1-gr-Vxt" secondAttribute="bottom" constant="8" id="rhQ-2d-JAm"/>
+                                                        <constraint firstItem="4R1-gr-Vxt" firstAttribute="leading" secondItem="ZvI-Xa-g6D" secondAttribute="leading" id="xAm-K6-lKD"/>
+                                                        <constraint firstItem="K1N-9L-Yjw" firstAttribute="centerY" secondItem="7qs-wQ-qWd" secondAttribute="centerY" id="ytq-Zj-c4A"/>
+                                                    </constraints>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="T0u-ZU-ZGq"/>
+                                                        </mask>
+                                                    </variation>
+                                                    <connections>
+                                                        <outlet property="channelTitleLabel" destination="4R1-gr-Vxt" id="xh1-On-4gy"/>
+                                                        <outlet property="durationLabel" destination="K1N-9L-Yjw" id="la3-as-34U"/>
+                                                        <outlet property="publishedDate" destination="7qs-wQ-qWd" id="2Wj-53-zMM"/>
+                                                        <outlet property="titleLabel" destination="ZvI-Xa-g6D" id="LX4-zf-ibP"/>
+                                                    </connections>
+                                                </view>
                                             </subviews>
                                         </view>
                                         <constraints>
-                                            <constraint firstAttribute="bottomMargin" secondItem="Sxx-3g-CD8" secondAttribute="bottom" id="TAV-p1-ot9"/>
-                                            <constraint firstItem="Sxx-3g-CD8" firstAttribute="top" secondItem="jmq-S1-raL" secondAttribute="topMargin" id="a6M-G2-Y19"/>
-                                            <constraint firstItem="Sxx-3g-CD8" firstAttribute="leading" secondItem="jmq-S1-raL" secondAttribute="leadingMargin" id="quR-9r-q6G"/>
-                                            <constraint firstAttribute="trailingMargin" secondItem="Sxx-3g-CD8" secondAttribute="trailing" id="u65-Mc-11s"/>
+                                            <constraint firstItem="Sxx-3g-CD8" firstAttribute="top" secondItem="jmq-S1-raL" secondAttribute="top" id="030-SL-Kwf"/>
+                                            <constraint firstItem="kbv-NR-Nze" firstAttribute="height" secondItem="jmq-S1-raL" secondAttribute="height" multiplier="0.58" id="07k-7z-hBV"/>
+                                            <constraint firstItem="kbv-NR-Nze" firstAttribute="bottom" secondItem="jmq-S1-raL" secondAttribute="bottom" id="Hxd-p3-Nim"/>
+                                            <constraint firstItem="kbv-NR-Nze" firstAttribute="width" secondItem="jmq-S1-raL" secondAttribute="width" id="J8x-aS-fRq"/>
+                                            <constraint firstItem="Sxx-3g-CD8" firstAttribute="leading" secondItem="jmq-S1-raL" secondAttribute="leading" id="RzG-cm-xaf"/>
+                                            <constraint firstItem="kbv-NR-Nze" firstAttribute="leading" secondItem="Sxx-3g-CD8" secondAttribute="leading" id="Saa-Bi-cAH"/>
+                                            <constraint firstItem="Sxx-3g-CD8" firstAttribute="height" secondItem="jmq-S1-raL" secondAttribute="height" id="gH7-hq-WDf"/>
+                                            <constraint firstItem="Sxx-3g-CD8" firstAttribute="width" secondItem="jmq-S1-raL" secondAttribute="width" id="pA7-b8-dZi"/>
                                         </constraints>
                                         <connections>
+                                            <outlet property="infoView" destination="kbv-NR-Nze" id="BJC-Dc-iWl"/>
                                             <outlet property="thumbnailImageView" destination="Sxx-3g-CD8" id="VL7-rU-Z2L"/>
                                         </connections>
                                     </collectionViewCell>
